--- a/backend/.sample.env
+++ b/backend/.sample.env
@@ -1,5 +1,4 @@
-PORT = 5000
-MONGODB_URL = mongodb+srv://rohitshahi581:pD8YrpXJE5nXVi1H@cluster0.atacd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT = 
 CORS =*
 
 CLOUDINARY_CLOUD_NAME= 
